Improved cta section on landing page and fix broken navbar collapse

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -127,7 +127,7 @@ a, a:visited, a:focus, a:active, a:hover{
   background-color: $body-bg-dark;
   padding-bottom: 30px;
   .join {
-     padding: 30px 120px 30px 120px !important;
+     padding: 30px 0 30px 0 !important;
     .col-md-6 {
       text-align: center;
       font-family: $main-font;
